# ChangeLog for dev-util/mv_perl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mv_perl-2.42 (30 Sep 2014)

  30 Sep 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*mv_perl-2.41 (21 Sep 2014)

  21 Sep 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support File-lchown for lutimes

*mv_perl-2.40 (20 Sep 2014)

  20 Sep 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*mv_perl-2.37 (13 Sep 2014)

  13 Sep 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. More precise perl deps

*mv_perl-2.35 (03 Sep 2014)

  03 Sep 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*mv_perl-2.34 (30 Aug 2014)

  30 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Fix touchdirs -r, finally

*mv_perl-2.33 (25 Aug 2014)

  25 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Fix sshconfig regressions

*mv_perl-2.32 (10 Aug 2014)

  10 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*mv_perl-2.31 (17 Jul 2014)

  17 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*mv_perl-2.29 (16 Jul 2014)

  16 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*mv_perl-2.28 (15 Jul 2014)

  15 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*mv_perl-2.27 (14 Jun 2014)

  06 Jul 2014; Martin Väth <martin@mvath.de>:
  New style github tarball

  14 Jun 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*mv_perl-2.26 (05 Jun 2014)

  05 Jun 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*mv_perl-2.25 (25 May 2014)

  25 May 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*mv_perl-2.24 (21 Nov 2013)

  21 Nov 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*mv_perl-2.23 (11 Nov 2013)
