@@ -5,7 +5,7 @@
 *sundtek-tv-140918.104249 (20 Sep 2014)
 
   20 Sep 2014; Martin Väth <martin@mvath.de>:
-  Version bump, remove old ebuild
+  Version bump.
 
 *sundtek-tv-140727.221230 (29 Jul 2014)
 
